bugfixe for fixed background issues on iOS

--- a/app/scss/_custom.scss
+++ b/app/scss/_custom.scss
@@ -15,7 +15,7 @@ header h3 {
   font-family: 'Droid Serif', serif;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .mt-md-6,
   .my-md-6 {
     margin-top: 7rem !important;
@@ -23,8 +23,18 @@ header h3 {
 }
 
 .header_bg {
-  background: url('images/main_background.jpg') fixed center no-repeat;
+  background-image: url('images/main_background.jpg');
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media (max-width: 767px) {
+  .header_bg {
+    //known bug for iOS
+    background-attachment: initial;
+  }
 }
 
 .bg-dark-greyed {
